@@ -42,6 +42,11 @@ Version 0.3, released 14 July 2011
 -Drop usb_redir_reset_status, instead if reconnecting to the device fails
  after reset the usb-host will send a usb_redir_device_disconnect packet
 
+Version 0.3.2, released 24 December 2011
+-The usb_redir_device_connect_header has been extended with a
+ device_version_bcd field. This is only send / received if both sides
+ have the usb_redir_cap_connect_device_version capability
+
 
 USB redirerection protocol version 0.3
 --------------------------------------
@@ -215,12 +220,17 @@ struct usb_redir_device_connect_header {
     uint8_t device_protocol;
     uint16_t vendor_id;
     uint16_t product_id;
+    uint16_t device_version_bcd;
 }
 
 No packet type specific additional data.
 
 This packet gets send by the usb-host when a device becomes available (it is
 possible for the usb-host to wait for a device to get plugged in).
+
+The device_version_bcd field should only be send (and expected on receive)
+when both sides have the usb_redir_cap_connect_device_version capability.
+If this is not the case the length of the packet will be 2 bytes less!
 
 Note that a usb-host may re-use the existing connection for a new / re-plugged
 device in this case this packet can be send after a usb_redir_device_disconnect
